--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <center><img src="image/ahh.jpg"></center>
+    <center><img src="ahh.jpg"></center>
     <table>
         <tr>
             <th rowspan="2">Course Code</th>
