--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
         <tr>
             <td class="label">Name</td>
             <td class="colon">:</td>
-            <td class="value"><span class="bold">IJAS IBRAHIM</span></td>
+            <td class="value"><span class="bold">ASHFER</span></td>
         </tr>
     </table>
 
     <!-- Reg No. on the right side -->
-    <div class="reg-no">Reg No. <span class="reg-no-bold">SH23BR0009</span><span class="reg-no-spacing"></span></div>
+    <div class="reg-no">Reg No. <span class="reg-no-bold">SH23BR0008</span><span class="reg-no-spacing"></span></div>
 
     <!-- Bordered table -->
     <table class="bordered-table">
